# KNN

./: Titanic_KNN.ipynb  csv2.csv  main.py  pyproject.toml  titanic3.xls
