[tool.poetry]
name = "knn"
version = "0.1.0"
description = ""
authors = ["Huynguyen <nguyenmaibaohuy2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
results = "^0.1.1588569394"
eli5 = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

